fix chat document layout issues

--- a/app/components/home.module.scss
+++ b/app/components/home.module.scss
@@ -94,8 +94,13 @@
   }
 }
 
+.window-content-container {
+  flex: 1;
+  width: 100%;
+}
+
 .window-content {
-  width: var(--window-content-width);
+  flex: 1;
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -352,6 +357,24 @@
   direction: rtl;
 }
 
+.document {
+  width: var(--document-width);
+  &.modal {
+    animation: slide-in ease 0.3s;
+    position: absolute;
+    z-index: 999;
+    height: 100%;
+    width: 100%;
+  }
+}
+
+.close {
+  position: absolute;
+  right: 32px;
+  top: 14px;
+  z-index: 999;
+}
+
 .document-selector {
   flex: 1;
   animation: fade-in ease 0.3s;
@@ -370,4 +393,25 @@
   display: flex;
   flex-direction: row;
   gap: 5px;
+}
+
+.drag {
+  position: absolute;
+  right: var(--document-width);
+  display: flex;
+  align-items: center;
+  width: 14px;
+  height: 24px;
+  padding: 0 2px;
+  cursor: ew-resize;
+  border-left: var(--border-in-light);
+  border-right: var(--border-in-light);
+  border-bottom: var(--border-in-light);
+  border-bottom-left-radius: 2px;
+  background-color: var(--white);
+
+  svg {
+    opacity: 0.2;
+    margin-left: -2px;
+  }
 }
