--- a/app/styles/window.scss
+++ b/app/styles/window.scss
@@ -1,5 +1,6 @@
 .window-header {
   padding: 14px 20px;
+  padding-right: 30px;
   border-bottom: var(--border-in-light);
   position: relative;
 
